--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Unity Projects.loader.js";
+      var loaderUrl = buildUrl + "/Downloads.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/Unity Projects.data.br",
-        frameworkUrl: buildUrl + "/Unity Projects.framework.js.br",
-        codeUrl: buildUrl + "/Unity Projects.wasm.br",
+        dataUrl: buildUrl + "/Downloads.data.br",
+        frameworkUrl: buildUrl + "/Downloads.framework.js.br",
+        codeUrl: buildUrl + "/Downloads.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "DemoSonic",
